# GenAI_Application

Dependency Injection FastAPI/: 0_code.py
Ecom/: README.md  package-lock.json  pyproject.toml
Ecom/api/: main.py
Ecom/api/tests/: test_main.py
Ecom/api/utils/: db.py  openai.py  services.py  settings.py
Ecom/ecom/: main.py
Ecom/image/: test.py
Ecom/tests/: main.py
Ecom/ui/: data.ipynb  database.db  next.config.mjs  package-lock.json  package.json  query.txt
Ecom/ui/actions/: Login.ts  add_to_cart.ts  delete_cart.ts  getOrder.ts  getProduct.ts  getUser.ts  get_cart_product.ts  openai.ts  placeorder.ts  placeorder.tsx  product-fetch.ts  products.ts  registerUser.ts  registerUser.tsx  updateCart.ts
Ecom/ui/app/: layout.tsx  page.tsx
Ecom/ui/app/api/: main.py
Ecom/ui/app/api/tests/: test_main.py
Ecom/ui/app/api/utils/: db.py  models.py  openai.py  services.py  settings.py  validation.py
Ecom/ui/app/cart/: page.tsx
Ecom/ui/app/checkout/: page.tsx
Ecom/ui/app/login/: page.tsx
Ecom/ui/app/orders/: page.tsx
Ecom/ui/app/products/[slug]/: page.tsx
Ecom/ui/components/: Add_products.tsx  Card.tsx  Cart.tsx  ChatBox.tsx  Delete_products.tsx  DialogDemo.tsx  Navbar.tsx  Prod.tsx  ProductQuantity.tsx  Products.tsx  Search.tsx  Signin.tsx  Signup.tsx
Ecom/ui/lib/: auth.ts
Ecom/ui/schemas/: index.ts
Ecom/ui/tests/: test_main.py
Ecom/ui/types/: user.d.ts
Financial_Analyst/: code.ipynb
Financial_Analyst_Assistant/: code.ipynb
JWT/: code.py  test.py
JWT/hashing/: code.py
Multimodal OpenAI/: class4.ipynb
OpenAI Function Caling/: class3.ipynb
To/fastapi-todo/fastapi_todo/: main.py
To/fastapi-todo/utils/: curd.py
Todo_APP/: crud.py  database.py  main.py  models.py  schema.py
TravelAI-Assisstant/: assistants.py  main.py  z1.py
class-poetry/: pyproject.toml
class1/: class1.ipynb
class1_site/: code.py
class2/: class2.ipynb
data/: dataset.py
fast-test/: package-lock.json  package.json
fast-test/api/: functions.py  index.py
fast-test/app/: page.tsx
fast-test/utils/: Todo.ts
fastapi/: code.py  f3.py  file2.py  header.py  hello_who.py
fastapi-todo/: pyproject.toml
fastapi-todo/fastapi_todo/: main.py
fastapi-todo/tests/: test_main.py
fastapi-todo/utils/: crud.py
hero_api/: pyproject.toml
json/: code.py
langchain/: doc.ipynb
pydantic/: data.py  model.py  web.py
test/: code.ipynb
todoapp/: .gitignore  pyproject.toml
todoapp/tests/: test_main.py
uit/: pyproject.toml
uit-api-class/: curd.py  pyproject.toml
uit-api-class/tests/: testmain.py
uit-api-class/uitclass/: db.py  main.py  settings.py
uit/uit/: main.py
uithero_api/: database.db  pyproject.toml
uithero_api/uithero/: main.py
