[tool.poetry]
name = "ecom"
version = "0.1.0"
description = ""
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
slugify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
