[tool.poetry]
name = "ecom"
version = "0.1.0"
description = ""
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
cryptography = "^42.0.5"
openai = "^1.16.2"
pytest = "^8.1.1"
responses = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
