[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.16"
fastapi = "^0.110.0"
psycopg2 = "^2.9.9"
uvicorn = "^0.29.0"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
